[package]
name = "minecraftserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
fastnbt = "2.4.3"
serde = "1.0.157"
serde_derive = "1.0.157"
serde_json = "1.0.94"
uuid = "1.3.0"

